# MiniCPM-o

./: .gitignore  README.md
configs/: local_duplex.json  local_duplex_gguf.json
docs/: local_duplex_full_summary_zh.md  local_duplex_status_zh.md  local_duplex_ubuntu24.md
local_duplex/: __init__.py  audio.py  backends.py  capswriter_asr_cli.py  cli.py  config.py  gguf_worker_client.py  host_paths.py  runtime.py  selftest.py  session_logging.py  vendor.py  video.py
local_duplex/gguf_worker/: CMakeLists.txt  worker_main.cpp
scripts/: bootstrap_local_duplex_spark.sh  build_local_duplex_gguf_backend.sh  interaction_log.sh  list_local_duplex_audio_devices.sh  localize_models.sh  logs_local_duplex.sh  package_local_duplex_bundle.sh  prepare_local_duplex_gguf.sh  run_local_duplex.sh  run_local_duplex_gguf.sh  selftest_local_duplex.sh  setup_duplex_env.sh  show_local_duplex_session.sh  start_local_duplex.sh  start_local_duplex_gguf.sh  stop_local_duplex.sh
